README: added sentence to read CONTRIB file

--- a/README
+++ b/README
@@ -4,3 +4,5 @@ Carbs Linux wiki
 This repository has world-access so that everyone can
 easily make changes. Please do not abuse it, or everyone
 can lose access to it.
+
+Please read the CONTRIBUTING file before committing anything.
